added head section renamed index.css to index-head.css

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>cool dogs</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index-head.css">
 </head>
 
 <body>
-    <h1>here will be dogs</h1>
-    <img src="img/grumpyDog.jpg" alt=" grumpy dog">
+
+    <head>
+        <h1>here will be dogs</h1>
+        <img src="img/grumpyDog.jpg" alt=" grumpy dog"></head>
+
 </body>
 
 </html>
