--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <head>
         <h1>here will be dogs</h1>
-        <img src="img/grumpyDog.jpg" alt=" grumpy dog"></head>
+        <img src="img/grumpyDog.jpg" alt=" grumpy dog">
+        <img src="img/doggy.jpg" alt="">
+    </head>
 
 </body>
 
